src/components/send/styles.css
@import '../app/variables';

.send {
  position: relative;
}

.mobileMenu,
.mobileClose {
  display: none;
}

@media (--medium-viewport) {
  .send {
    position: fixed;
    top: 100vh; /* stylelint-disable-line */
    right: 0;
    height: 100vh; /* stylelint-disable-line */
    transition: top 300ms ease-in-out;
    z-index: 10;

    &.isActive {
      top: var(--m-top-bar-height);
    }
  }

  .mobileClose {
    display: block;
    position: absolute;
    top: 20px;
    right: 20px;
    font-size: 12px;
    font-weight: 600;
    cursor: pointer;
  }

  .mobileMenu {
    display: block;
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: 10;

    &.isHidden {
      display: none;
    }
  }

  .mobileMenuItem {
    display: inline-block;
    padding: 20px;
    font-weight: 600;
    font-family: var(--heading-font);
    cursor: pointer;
    font-size: 24px;
  }
}

@media (--small-viewport) {
  .send {
    height: 100vh; /* stylelint-disable-line */

    &.isActive {
      top: var(--s-top-bar-height);
    }
  }

  .mobileMenuItem {
    font-size: 18px;
  }
}

